added more sources for Apple's section

--- a/mental-model-paper/death-of-metaphor.bib
+++ b/mental-model-paper/death-of-metaphor.bib
@@ -15,10 +15,24 @@
 }
 	
 @misc{ars-technica-mavericks,
-	title = {OS X 10.9 Mavericks: The Ars Technica Review},
+	title = {{OS X} 10.9 Mavericks: The {A}rs {T}echnica {R}eview},
 	author = {John Siracusa},
 	year = {2013},
 	note = {\url{http://arstechnica.com/apple/2013/10/os-x-10-9/} (last accessed on 10/29/13)}
+}
+
+@misc{ars-technica-iOS7,
+	title = {i{OS} 7, thoroughly reviewed},
+	author = {Andrew Cunningham},
+	year = {2013},
+	note = {\url{http://arstechnica.com/apple/2013/09/ios-7-thoroughly-reviewed/} (last accessed on 11/02/13)}
+}
+
+@misc{apple-design,
+	title = {i{OS} 7: Design},
+	author = {Apple Inc.},
+	year = {2013},
+	note = {\url{http://www.apple.com/ios/design/} (last accessed on 11/02/13}
 }
 
 @article{reification,
