--- a/mental-model-paper/death-of-metaphor.tex
+++ b/mental-model-paper/death-of-metaphor.tex
@@ -16,48 +16,42 @@
 
 \begin{document}
 \maketitle
+\centerline{\textbf{Abstract}}
+Metaphor, in the broadest sense of the term for the discipline of a computer science, is a group of user interface images and activities that take advantage of particular proficiencies that users already have of other domains. Typical examples include using a tool or some kind of gear to represent Settings or Preferences on some operating system or ``flipping'' a page in a book reading app. Although metaphor is extremely useful and even though the majority of people designing user interfaces currently employ it heavily , I argue that the beginning of the end of metaphor is on its way (and should be sought out after).
 
-Metaphor, in the broadest sense of the term for the discipline of a computer science, is a group of user interface images and activities that take advantage of particular proficiencies that users already have of other domains. Typical examples include using a tool or some kind of gear to represent Settings or Preferences on some operating system or ``flipping'' a page in a book reading app.  Although the majority of people designing user interfaces of any sort employ metaphors heavily today, I argue that the beginning of the end of metaphor is well on it's way (and should be sought out after).
+add stuff from class to make this a bomb ass dank ass paper
 
+\pagebreak
 \section{Introduction \cite{reification}}
 
-Metaphor may seem like a new phenomenon in CS (Computer Science) to people not involved in the field. 
+Metaphor may seem like a new phenomenon in CS (Computer Science) to people not involved in the field. Yet, metaphor has been a topic of conversation since even before GUI's (graphical user interfaces) came to stardom.
+In years like 1998, writers like Faulkner were writing that, ``Designers of systems should, where possible, use metaphors that the user will be familiar with.'' \cite{essence}  Or in 1995, Hill wrote, ``Metaphors make it easy to learn about unfamiliar objects.'' \cite{practical} Or even earlier in 1992, Macintosh's human interface guidelines say, ``Use metaphors involving concrete, familiar ideas and make the metaphors plain, so that users have a set of expectations to apply to computer environments.'' \cite{apple}
 
+Wait, wait, wait. Did you read all that? Every single one of the citations mentioned that metaphors should be used in design. Every single one.
 
+\section{Metaphor and the Human Brain} 
+If you were to ask random people what they know about the brain, more often than not, most of them would mention something along the lines that the brain has two hemispheres, and that the left side is perceived as being analytical, technical, and logical and that the right is perceived as being creative, artistic, and expressive. Although this separation in the brain has been proven to not be so dichotomic by studies and research, it provides an interesting parallel to computer scientists and metaphor.
 
-Yet, history says otherwise. In years like 1998, writers like Faulkner were writing that, ``Designers of systems should, where possible, use metaphors that the user will be familiar with.'' \cite{essence}  Or in 1995, Hill wrote, ``Metaphors make it easy to learn about unfamiliar objects.'' \cite{practical} Or even earlier in 1992, Macintosh's human interface guidelines say, ``Use metaphors involving concrete, familiar ideas and make the metaphors plain, so that users have a set of expectations to apply to computer environments.'' \cite{apple}
-
-Wait, wait, wait. Did you read all that? Every single one of the citations mentioned that metaphors should be used in design. Every single one. Just as the corpus calossum connects the left and right hemispheres of the brain (often perceived as left being analytical, technical, and logical and right as being creative, artistic, and expressive), computer scientist believed metaphor connected them to the highly artistic and non-technical people. 
-
-common misconceptions of differences between right and left make allusions to people.
-
-In terms of how long humans have been roaming this earth, electronic technology is quite a new thing for our two-legged species. Within the last 50 years, hard drive capacities have exponentially grown while their physical space has exponentially shrunk. Seeing that technology changes nearly on a daily basis, it seems that it would be logical for computer scientists to employ the concept of metaphor. For nontechnical users, it would make sense to employ powerful metaphors which simulate real-life. One would assume that adding more life like design into the way someone interacts with a given piece of technology would increase their overall usability. In terms of creating a usable interface, it is funny to think that they way in which we interact with that technology hasn't changed all too much. In the examples that I mentioned in the abstract, users know that tools can modify things in real life, the connection is clear for any user utilizing that said operating system.
-
-Imagine a computer scientist thinking about how they could design a user interface that works well with people who are not technical? Use what they already know. 
-
-Metaphor limits the designer because it gives less freedom to employ there way they do things. Metaphor limits the user because it disallows for true learning.
-\cite{ars-technica-mavericks}
+Just as the corpus calossum, the flat bundle of neural fibers beneath the cortex, connects the left and right cerebral hemispheres and facilitates interhemispheric communication, metaphor is the connection between the highly artistic and expressive people and the highly  technical and analytical people.
 
 \cite{bae16}
 
-\section{Background, Prior Work, and Literature Read}
+\section{Apple's push away from metaphor}
+Apple has realized that as technology is becoming more and more ingrained into our society, the aid of metaphor is largely shrinking. With their new releases of iOS 7 and OSX 10.9 Mavericks, Apple commenced their push away from metaphor.
 
-\subsection{Background}
+\subsection{iOS7}
+With no surprise, the release of iOS 7 garnered much support and much backlash. Many of the large criticisms include its transition to overly simple menus, its change from icons to words, and its unlifelike apps. With it's goal being simplicity, Apple comments on their shift, ``The interface is purposely unobtrusive. Conspicuous ornamentation has been stripped away. Unnecessary bars and buttons have been removed.'' \cite{apple-design} They have realized that \textit{skeuomorhpism}. the design concept of making items represented resemble their real-world counterparts (the definition is surprisingly not too far off from metaphor), serves no purpose in their new operating system.
 
-\subsection{Literature Read}
+In the Ars Technica Review of iOS 7, the author Andrew Cunningham isn't afraid to make fun of the previous operating system by mentioning,``Will people understand what the Newsstand folder is for if we don?t make it look like a little wooden shelf? Will people understand that things have been deleted from Passbook if we don?t throw their virtual coupons into a virtual paper shredder?'' \cite{ars-technica-iOS7} 
 
-In this section, I go over the literature I read to support my claims and how they relate to my argument.
+\subsection{OSX 10.9 Mavericks}
+ \cite{ars-technica-mavericks} 
+ 
+\subsection{Summary}
+Apple realizes the potential of \textit{easing the brakes} on metaphor and skeuomorphism. They understand that their users are, god forbid, \textit{smart} enough. 
 
-\subsubsection{Apple's push away from metaphor}
 
-With no surprise, the release of iOS 7 garnered much support and much backlash. Many of the large criticisms include its transition to overly simple menus, its change from icons to words, and its unlifelike apps. 
-
-Apple has realized that as technology is becoming more and more ingrained into our society, the aid of metaphor is largely shrinking.
-
-\subsubsection{Minimalism in Computer Science}
-Minimalism is a very sought out concept in computer science. Code golf (writing programs with as little characters as possible), 
-
-\subsubsection{Djikstra's argument for}
+\section{Djikstra's argument against metaphor}
 Edsgar Dijkstra, one of the most important computer scientists, claimed that metaphor was extremely damaging to the profession even before the age of personal computers and the rise of GUI's. In a transcript titled \textit{On the cruelty of really teaching computing science}, he initially introduces his argument by explaining the way in which we approach tomorrow's struggles. He says the most common way of facing tomorrow is by ``means of metaphors and analogies'' so that ``we try to link the new to the old, the novel to the familiar''. He makes the claim that coping with "radical novelties" in this fashion is extremely detrimental for the field of computer science for a number of reasons.
 
 First, he does admit that in the cases of ``sufficiently slow and gradual change'', metaphor works reasonably well. A powerful example of this is the field of mathematics. The community of this discipline has never really challenged the ways of teaching, learning, and understanding itself. Djikstra puts it the best, ``Simply by definition, mathematics will continue to be what it used to be.''
@@ -65,15 +59,10 @@ First, he does admit that in the cases of ``sufficiently slow and gradual change
 Yet, in the case of ``sharp discontinuity'', the employment of metaphor breaks down. Metaphor becomes more ``misleading than illuminating''. It makes sense, doesn't it? In a field that changes nearly daily, the heavy reliance of our past limits the way in which the field can evolve.
 \cite{ewd1036}
 
-\subsubsection{Summary of literature read}
+\section{Conclusion}
+Metaphor is an incredibly useful design, but it limits designers because it gives less freedom to employ there way they do things and it limits users because it disallows for true learning.
 
-\section{Methods}
-\section{Discussion}
-\subsection{Views}
-
-\section{Conclusions}
-
-
+\pagebreak
 \bibliography{death-of-metaphor}
 \bibliographystyle{plain}
 
