added ars technica review of lion

--- a/mental-model-paper/death-of-metaphor.bib
+++ b/mental-model-paper/death-of-metaphor.bib
@@ -15,7 +15,7 @@
 }
 	
 @misc{ars-technica-mavericks,
-	title = {{OS X} 10.9 Mavericks: The {A}rs {T}echnica {R}eview},
+	title = {{OS X} 10.9 {M}avericks: the {A}rs {T}echnica {R}eview},
 	author = {John Siracusa},
 	year = {2013},
 	note = {\url{http://arstechnica.com/apple/2013/10/os-x-10-9/} (last accessed on 10/29/13)}
@@ -27,6 +27,14 @@
 	year = {2013},
 	note = {\url{http://arstechnica.com/apple/2013/09/ios-7-thoroughly-reviewed/} (last accessed on 11/02/13)}
 }
+
+@misc{ars-technica-lion,
+	title = {{OS X} 10.7 {L}ion: the {A}rs {T}echnica {R}eview},
+	year = {2011},
+	author = {John Siracusa},
+	note = {\url{http://arstechnica.com/apple/2011/07/mac-os-x-10-7/} (last accessed on 11/03/13)}
+}
+	
 
 @misc{apple-design,
 	title = {i{OS} 7: Design},
