added sources for rules of usabilty, reorganized the biblography for readability by grouping similar sources

--- a/mental-model-paper/death-of-metaphor.bib
+++ b/mental-model-paper/death-of-metaphor.bib
@@ -1,19 +1,29 @@
-@article{bae16,
-	Author = {Bakker, Saskia and Alissa N. Antle and Elise van den Hoven},
-	Issue = {4},
-	Journal = {Personal and Ubiquitous Computing},
-	Pages = {433-449},
-	Title = {Embodied metaphors in tangible interaction design},
-	Volume = {16},
-	Year = 2012
+%
+% Usability Rules
+%
+
+@misc{shniederman-golden-rules,
+	title = {Shneiderman's ``Eight Golden Rules of Interface Design''},
+	author = {Shniederman, Ben},
+	note = {\url{http://faculty.washington.edu/jtenenbg/courses/360/f04/sessions/schneidermanGoldenRules.html} (last accessed on 11/03/13)}
 }
-	
-@misc{ewd1036,
-	Author = {Edsgar W. Djikstra},
-	Title = {On the cruelty of really teaching computer science},
-	Year = 1988
+
+@misc{tognazzini-first-principles,
+	title = {First Principles of Interaction Design},
+	author = {Bruce Tognazzini},
+	note = {\url{http://www.asktog.com/basics/firstPrinciples.html} (last accessed on 11/03/13)}
 }
-	
+
+@misc{nielsen-usability-heuristics,
+	title = {10 Usability Heuristics for User Interface Design},
+	author = {Jakob Nielsen},
+	note = {\url{http://www.nngroup.com/articles/ten-usability-heuristics/} (last accessed on 11/03/13)}
+}
+
+%
+% Ars Technica
+%	
+
 @misc{ars-technica-mavericks,
 	title = {{OS X} 10.9 {M}avericks: the {A}rs {T}echnica {R}eview},
 	author = {John Siracusa},
@@ -34,7 +44,10 @@
 	author = {John Siracusa},
 	note = {\url{http://arstechnica.com/apple/2011/07/mac-os-x-10-7/} (last accessed on 11/03/13)}
 }
-	
+
+%
+% Apple Inc.
+%
 
 @misc{apple-design,
 	title = {i{OS} 7: Design},
@@ -43,6 +56,48 @@
 	note = {\url{http://www.apple.com/ios/design/} (last accessed on 11/02/13}
 }
 
+@book{apple,
+	author = {Apple Computer, Inc.},
+	title = {Macintosh Human Interface Guidelines},
+	year = {1992},
+	publisher = {Addison Wesley},
+	address = {Reading, MA.}
+}
+
+%
+% Census
+% 
+
+@misc{computer-use,
+	title = {Computer and Internet Use in the United States},
+	author = {File, Thom},
+	year = {2013},
+	note = {\url{http://www.census.gov/prod/2013pubs/p20-569.pdf} (last accessed on 11/03/13)},
+	publisher = {U.S. Census Bureau}
+}
+
+%
+% ACM Articles
+%
+
+@inproceedings{physical-metaphor,
+ 	author = {Lee, Sang-Su and Lee, Woohun},
+	 title = {Exploring effectiveness of physical metaphor in interaction design},
+	 booktitle = {CHI '09 Extended Abstracts on Human Factors in Computing Systems},
+	 series = {CHI EA '09},
+	 year = {2009},
+	 isbn = {978-1-60558-247-4},
+	 location = {Boston, MA, USA},
+	 pages = {4363--4368},
+	 numpages = {6},
+	 url = {http://doi.acm.org/10.1145/1520340.1520667},
+	 doi = {10.1145/1520340.1520667},
+	 acmid = {1520667},
+	 publisher = {ACM},
+	 address = {New York, NY, USA},
+	 keywords = {inertial scroll, interaction design, interaction styles, interface design, physical metaphor},
+}
+	 
 @article{reification,
  	author = {Blackwell, Alan F.},
  	title = {The reification of metaphor as a design tool},
@@ -63,13 +118,39 @@
  	keywords = {UI metaphor, design research, history of HCI},
 } 
 
-@book{apple,
-	author = {Apple Computer, Inc.},
-	title = {Macintosh Human Interface Guidelines},
-	year = {1992},
-	publisher = {Addison Wesley},
-	address = {Reading, MA.}
+@article{children-metaphor,
+	 author = {Bakker, Saskia and Antle, Alissa N. and Van Den Hoven, Elise},
+	 title = {Embodied metaphors in tangible interaction design},
+	 journal = {Personal Ubiquitous Comput.},
+	 issue_date = {April     2012},
+	 volume = {16},
+	 number = {4},
+	 month = apr,
+	 year = {2012},
+	 issn = {1617-4909},
+	 pages = {433--449},
+ 	numpages = {17},
+	 url = {http://dx.doi.org/10.1007/s00779-011-0410-4},
+	 doi = {10.1007/s00779-011-0410-4},
+	 acmid = {2205717},
+	 publisher = {Springer-Verlag},
+	 address = {London, UK, UK},
+	 keywords = {Design research, Embodied interaction, Embodied schemata, Interaction design and children, Interactive learning systems, Metaphor, Musical sound education, People-centered approach, Tangible user interfaces},
 }
+
+@article{bae16,
+	Author = {Bakker, Saskia and Alissa N. Antle and Elise van den Hoven},
+	Issue = {4},
+	Journal = {Personal and Ubiquitous Computing},
+	Pages = {433-449},
+	Title = {Embodied metaphors in tangible interaction design},
+	Volume = {16},
+	Year = 2012
+}	
+
+%
+% Books
+%
 
 @book{essence,
 	author = {Faulkner, Christine},
@@ -85,4 +166,14 @@
 	year = {1995},
 	publisher = {DP Publications}, 
 	address = {London}}
+}
+
+%
+% Djikstra
+%
+	
+@misc{ewd1036,
+	Author = {Edsgar W. Djikstra},
+	Title = {On the cruelty of really teaching computer science},
+	Year = 1988
 }
