added sources for norman, hamilton, and laurel; removed sources not used

--- a/mental-model-paper/death-of-metaphor.bib
+++ b/mental-model-paper/death-of-metaphor.bib
@@ -20,6 +20,13 @@
 	note = {\url{http://www.nngroup.com/articles/ten-usability-heuristics/} (last accessed on 11/03/13)}
 }
 
+@misc{norman-seven-stages,
+	title = {Seven Stages of Action},
+	author = {Norman, Donald},
+	year = {1988},
+	note = {\url{http://cmapspublic.ihmc.us/servlet/SBReadResourceServlet?rid=1165167923187_663887047_11513} (last accessed on 1/01/13)}
+}
+
 %
 % Ars Technica
 %	
@@ -118,35 +125,25 @@
  	keywords = {UI metaphor, design research, history of HCI},
 } 
 
-@article{children-metaphor,
-	 author = {Bakker, Saskia and Antle, Alissa N. and Van Den Hoven, Elise},
-	 title = {Embodied metaphors in tangible interaction design},
-	 journal = {Personal Ubiquitous Comput.},
-	 issue_date = {April     2012},
-	 volume = {16},
-	 number = {4},
-	 month = apr,
-	 year = {2012},
-	 issn = {1617-4909},
-	 pages = {433--449},
- 	numpages = {17},
-	 url = {http://dx.doi.org/10.1007/s00779-011-0410-4},
-	 doi = {10.1007/s00779-011-0410-4},
-	 acmid = {2205717},
-	 publisher = {Springer-Verlag},
-	 address = {London, UK, UK},
-	 keywords = {Design research, Embodied interaction, Embodied schemata, Interaction design and children, Interactive learning systems, Metaphor, Musical sound education, People-centered approach, Tangible user interfaces},
-}
-
-@article{bae16,
-	Author = {Bakker, Saskia and Alissa N. Antle and Elise van den Hoven},
-	Issue = {4},
-	Journal = {Personal and Ubiquitous Computing},
-	Pages = {433-449},
-	Title = {Embodied metaphors in tangible interaction design},
-	Volume = {16},
-	Year = 2012
-}	
+@article{metaphor-theory-practice,
+	author = {Hamilton, Anne},
+	title = {Metaphor in theory and practice: the influence of metaphors on expectations},
+	journal = {ACM J. Comput. Doc.},
+	issue_date = {Nov. 2000},
+	volume = {24},
+	number = {4},
+	month = nov,
+	year = {2000},
+	issn = {1527-6805},
+	pages = {237--253},
+	numpages = {17},
+	url = {http://doi.acm.org/10.1145/353927.353935},
+	doi = {10.1145/353927.353935},
+	acmid = {353935},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {communication, human factors, human information processing, metaphor, organizational language},
+} 
 
 %
 % Books
@@ -176,4 +173,25 @@
 	Author = {Edsgar W. Djikstra},
 	Title = {On the cruelty of really teaching computer science},
 	Year = 1988
+}
+
+%
+% Other
+%
+
+@book{art-hci,
+	title = {The Art Of Human-Computer Interface Design},
+	author = {Laurel, Brenda},
+	year = {1990},
+	publisher = {Addison Wesley},
+	address = {Reading, MA}
+}
+
+@book{design-everyday,
+	address = {New York},
+	author = {Norman, Donald A.},
+	isbn = {0-465-06710-7},
+	publisher = {Basic Books},
+	title = {The Design of Everyday Things},
+	year = 2002
 }
